src/main/css/components/bottom-bar.css
.bottom-bar {
  /* TODO hm... not sure... */
  /* bottom bar has to be above "everything" else */
  z-index: 999999;

  /* position is set by javascript, as we need javascript to detect whether sticky or not. */
  /* as soon as firefox, safari supports "container-type: scroll-state" we can get rid of javascript. */
  /* (see git history for css...) */

  .bottom-bar-inner {
    padding-top: --spacing(2);
    padding-bottom: --spacing(2);
  }
}

.bottom-bar.uv-sticky--stuck {
  background-color: #fafafa;
  border-top: 1px solid var(--color-gray-100);

  @variant dark {
    border-top-color: var(--color-zinc-800);
    background-color: var(--color-zinc-900);
  }
}

